--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.5.4",
+    "morgan": "^1.10.0"
   }
 }
