--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,11 @@ dist-ssr
 *.local
 
 # Ignore node_modules directories everywhere
-node_modules/
+/backend/node_modules/
 
 # Ignore .env files specifically inside the backend directory
 /backend/.env
+/frontend/.env
 
 # Editor directories and files
 .vscode/*
