--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^6.1.2",
     "@reduxjs/toolkit": "^2.2.8",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
